--- a/media-queries-exercise-2/index.html
+++ b/media-queries-exercise-2/index.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <main>
+
             <header>
                 <h1>Stay up to date!</h1>
                 <p>
@@ -28,7 +28,7 @@
                     </div>
                     <div class="row">
                         <div class="form-item">
-                            <label for="twitter">Twitter Handle</label>
+                            <label for="id">Twitter Handle</label>
                             <input type="text" id="twitter" name="twitter" />
                         </div>
                         <div class="form-item">
@@ -55,6 +55,6 @@
                     </div>
                 </form>
             </div>
-        </main>
+        
     </body>
 </html>
