--- a/introduction-to-css-selectors/index.html
+++ b/introduction-to-css-selectors/index.html
@@ -10,21 +10,22 @@
     </head>
     <body>
         <header>
-            <h1>H1 Title</h1>
-            <h2>H2 Title</h2>
+            <h1 class="main-heading">H1 Title</h1>
+            <h2 class="main-heading">H2 Title</h2>
             <nav>
-                <a href="#">Nav Item 1</a>
-                <a href="#">Nav Item 2</a>
-                <a href="#">Nav Item 3</a>
+                <a href id="nav-item-1">Nav Item 1</a>
+                <a href id="nav-item-2">Nav Item 2</a>
+                <a href id="nav-item-3">Nav Item 3</a>
             </nav>
         </header>
-        <div>
-            <p>A paragraph tag, in a div tag.</p>
+        <div id="box">
+            <h2>About Me</h2>
+            <p id="first-paragraph">A paragraph tag,in a div tag.</p>
             <img src="logo.png" alt="She Codes Logo.">
             <p>Another paragraph tag, in a div.</p>
             <ul>
-                <li>List Item 1</li>
-                <li>List Item 2</li>
+                <li class="list-item">List Item 1</li>
+                <li class="list-item">List Item 2</li>
                 <li>List Item 3</li>
             </ul>
         </div>
