--- a/introduction-to-css/index.html
+++ b/introduction-to-css/index.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <h1>She Codes</h1>
-            <h2>{Cupcakes}</h2>
+            <h2>Cupcakes</h2>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="cupcake-effect.html">The Cupcake Effect</a>
@@ -20,7 +20,7 @@
         </header>
         <div>
             <p>Check out our awesome designer cupcakes!</p>
-            <img src="images/cupcake-1.jpg" alt="She Codes Cupcakes.">
+            <img id="img" src="images/cupcake-1.jpg" alt="She Codes Cupcakes.">
             <p>Our Cupcakes are:</p>
             <ul>
                 <li>Colourful</li>
